force-app/main/default/objects/BookOrder__c/BookOrder__c.object-meta.xml
<CustomObject>
    <label>BookOrder</label>
    <nameField>
        <label>BookOrder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BooksOrders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>