force-app/main/default/objects/BookOrder__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller</label>
    <referenceTo>Seller__c</referenceTo>
    <relationshipLabel>BooksOrders</relationshipLabel>
    <relationshipName>BooksOrders</relationshipName>
    <type>Lookup</type>
</CustomField>