force-app/main/default/objects/BookOrder__c/listViews/practise.listView-meta.xml
<ListView>
    <fullName>practise</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Seller__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>practise</label>
</ListView>